--- a/src/styles/css/responsive.css
+++ b/src/styles/css/responsive.css
@@ -1841,6 +1841,9 @@
   }
 }
 @media only screen and (max-width: 991px) and (min-width: 768px) {
+  .accordion {    
+    max-width: 100%;
+  }
   .dashboard-right-sec {
     padding: 50px 35px 50px 50px;
   }
@@ -5255,11 +5258,18 @@
     width: 75%;
     height: 75%;
   }
+
+  .accordion {    
+    max-width: 100%;
+  }
 }
 @media screen and (max-width: 560px) {
   th.topup-table-header {
     font-size: 10px;
     line-height: 15px;
+  }
+  .accordion {    
+    max-width: 100%;
   }
 }
 @media (max-width: 991px) {
