--- a/src/styles/css/responsive.css
+++ b/src/styles/css/responsive.css
@@ -3180,7 +3180,7 @@
     width: calc(100% - 130px);    
   }
 }
-@media only screen and (max-width: 1100px) and (min-width: 991px) {
+@media only screen and (max-width: 1100px) and (min-width: 992px) {
   .wallet-page .dashboard-notification-kyc-expire {
     width: calc(100% - 130px);    
   }
@@ -3195,8 +3195,8 @@
 }
 @media only screen and (max-width: 991px) and (min-width: 150px) {
   .wallet-page .dashboard-notification-kyc-expire {
-    width: calc(100% - 130px);    
-    margin-top: -35px;
+    width: 100%;
+    margin-top: 15px;
   }
 }
 @media only screen and (min-width: 768px) {
@@ -5305,5 +5305,63 @@
   }
   .rc-refund-all-wrap .rc-refund-main-wrap {
     width: 100%;
+  }
+}
+
+
+@media only screen and (max-width: 767px) {
+  .wallet-page .dashboard-notification-kyc-expire label {
+    width: 100%;
+    font-size: 14px;
+    /* margin-left: 40px; */
+  }
+  .wallet-page .dashboard-notification-kyc-expire label a.kyc-expire-link span {
+    font-size: 14px;
+    display: block !important; /* Set span to block-level element */
+  }
+  a.kyc-expire-link {
+    display: block;
+  }
+}
+
+@media only screen and (min-width: 1173px) and (max-width: 1335px) {
+  .wallet-page .dashboard-notification-kyc-expire label {
+    font-size: 12.5px;
+  }
+  .wallet-page .dashboard-notification-kyc-expire label a.kyc-expire-link span {
+    font-size: 12.5px;    
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 992px) {
+  .wallet-page .dashboard-notification-kyc-expire label {
+    width: 100%;
+    font-size: 14px;    
+  }
+  .wallet-page .dashboard-notification-kyc-expire label a.kyc-expire-link span {
+    font-size: 14px;
+    display: block !important; /* Set span to block-level element */
+  }
+}
+
+@media only screen and (min-width: 993px) and (max-width: 1024px) {
+  .wallet-page .dashboard-notification-kyc-expire label {
+    font-size: 14px;
+    margin-left: 30px;
+  }
+  .wallet-page .dashboard-notification-kyc-expire label a.kyc-expire-link span {
+    font-size: 14px;
+    display: block !important; /* Set span to block-level element */
+  }
+}
+
+@media only screen and (min-width: 1025px) and (max-width: 1172px) {
+  .wallet-page .dashboard-notification-kyc-expire label {
+    font-size: 14px;
+    margin-left: 40px;
+  }
+  .wallet-page .dashboard-notification-kyc-expire label a.kyc-expire-link span {
+    font-size: 14px;
+    display: block !important; /* Set span to block-level element */
   }
 }
