--- a/src/pages/cms-content/faq/faq-content.css
+++ b/src/pages/cms-content/faq/faq-content.css
@@ -1,7 +1,12 @@
 /* FaqContent.css */
 .accordion {
   border: none;
-  max-width: 70%;
+  width: 80%;
+}
+
+.accordion-wrapper{
+  display: flex;
+  justify-content: center;
 }
 
 .accordion-title-wrapper {
@@ -14,7 +19,7 @@
   position: relative;
   cursor: pointer;
   border-bottom: 1px solid #ddd;
-  padding: 10px;
+  padding: 15px;
   background-color: #f9f9f9;
   transition: background-color 0.3s;
 }
