Recurring edit button disabled functionality and in details is_delete flag set.

--- a/src/styles/css/style.css
+++ b/src/styles/css/style.css
@@ -2104,7 +2104,7 @@ box-shadow: 4px 4px 24px rgba(0, 0, 0, 0.08); */
 
 .payee-name-img-wrap .payee-img img {
   /*max-width: 100%;
-  height: auto; 
+  height: auto;
   max-height: 58px;*/
   width: 100%;
   height: 100%;
@@ -2294,7 +2294,7 @@ box-shadow: 4px 4px 24px rgba(0, 0, 0, 0.08); */
 
 /* .payment-blocks-listing {
   position: relative;
-  padding-bottom: 34px; 
+  padding-bottom: 34px;
   overflow-x: auto;
   white-space: nowrap;
   flex-wrap: nowrap;
@@ -7861,6 +7861,34 @@ ul.recent-act-lw-main .act-info-wrap-left {
   line-height: 20px;
   margin-bottom: 20px;
   padding-left: 10px;
+}
+
+.section-recurring-dates {
+  /* Set a fixed height for the container to enable scrolling */
+  height: 420px; /* Adjust as needed */
+
+  /* Enable scrolling */
+  overflow-y: auto;
+
+  /* Customize the scrollbar */
+  scrollbar-width: thin; /* "auto" hides scrollbar in Safari */
+  scrollbar-color: #7f8c8d #f3f3f3; /* thumb and track color */
+}
+
+/* Define scrollbar styles for WebKit browsers */
+.section-recurring-dates::-webkit-scrollbar {
+  width: 8px; /* Width of the scrollbar */
+}
+
+/* Define scrollbar thumb styles for WebKit browsers */
+.section-recurring-dates::-webkit-scrollbar-thumb {
+  background-color: #7f8c8d; /* Color of the thumb */
+  border-radius: 10px; /* Rounded corners */
+}
+
+/* Define scrollbar track styles for WebKit browsers */
+.section-recurring-dates::-webkit-scrollbar-track {
+  background-color: #ecf0f1; /* Color of the track */
 }
 
 .rc-refund-main-inner.section-recurring-dates .freq-date-header tr {
