--- a/src/styles/css/style.css
+++ b/src/styles/css/style.css
@@ -8536,11 +8536,31 @@ ul.recent-act-lw-main .act-info-wrap-left {
   cursor: pointer;
 }
 
-/* @keyframes float-animation {
-  0% {
-    right: -100%;
-  }
-  100% {
-    right: 100%;
-  }
-} */
+.tooltip-container-contact {
+  position: relative;
+  display: inline-block;
+  cursor: pointer;
+}
+
+.tooltip-contact {
+  visibility: hidden;
+  width: 120px;
+  font-size: 10px;
+  background-color: var(--red);
+  color: white;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px;
+  position: absolute;
+  z-index: 1;
+  bottom: 125%;
+  left: 50%;
+  transform: translateX(-50%);
+  opacity: 0;
+  transition: opacity 0.3s;
+}
+
+.tooltip-container-contact:hover .tooltip-contact {
+  visibility: visible;
+  opacity: 1;
+}
