Cursor not allowed on disabled components.

--- a/src/styles/css/dashboard.css
+++ b/src/styles/css/dashboard.css
@@ -393,7 +393,7 @@
   .swiper-slide
   .cb-div
   input[type="checkbox"] {
-  visibility: hidden;
+  /* visibility: hidden; */
   appearance: none;
   width: auto;
   inset: 0;
