--- a/src/components/modals/contactList.css
+++ b/src/components/modals/contactList.css
@@ -33,6 +33,9 @@
   position: absolute;
   right: 0;
 }
+.cm-listing-check.cursor-not-allowed label:before {
+  cursor: not-allowed;
+}
 .cm-listing-check label:after {
   content: "";
   width: 5px;
