--- a/src/styles/css/style.css
+++ b/src/styles/css/style.css
@@ -8137,6 +8137,21 @@ ul.recent-act-lw-main .act-info-wrap-left {
   overflow-y: auto;
   padding-right: 25px;
 }
+.res-data-wrap {
+  height: 420px;
+  overflow-y: auto;
+}
+.res-data-wrap::-webkit-scrollbar {
+  width: 5px;
+}
+.res-data-wrap::-webkit-scrollbar-thumb {
+  background-color: #7f8c8d;
+  border-radius: 10px;
+}
+.res-data-wrap::-webkit-scrollbar-track {
+  background-color: #ecf0f1;
+  border-radius: 10px;
+}
 .rese-modal-wrap .modal-content {
   padding: 50px 30px 50px 40px;
 }
