--- a/src/styles/css/style.css
+++ b/src/styles/css/style.css
@@ -5262,7 +5262,7 @@ input[type="search"]::-webkit-search-cancel-button {
   left: auto;
   opacity: 0;
   cursor: pointer;
-  z-index: 9;
+  z-index: 0;
 }
 
 .clearsearchbox > svg {
@@ -8167,18 +8167,14 @@ ul.recent-act-lw-main .act-info-wrap-left {
   overflow-y: auto;
   padding-right: 25px;
 }
-.res-data-wrap {
-  height: 420px;
-  overflow-y: auto;
-}
-.res-data-wrap::-webkit-scrollbar {
+.rese-modal-wrap .res-data-wrap::-webkit-scrollbar {
   width: 5px;
 }
-.res-data-wrap::-webkit-scrollbar-thumb {
+.rese-modal-wrap .res-data-wrap::-webkit-scrollbar-thumb {
   background-color: #7f8c8d;
   border-radius: 10px;
 }
-.res-data-wrap::-webkit-scrollbar-track {
+.rese-modal-wrap .res-data-wrap::-webkit-scrollbar-track {
   background-color: #ecf0f1;
   border-radius: 10px;
 }
@@ -8256,7 +8252,7 @@ ul.recent-act-lw-main .act-info-wrap-left {
   left: auto;
   opacity: 0;
   cursor: pointer;
-  z-index: 9;
+  z-index: 0;
 }
 .contact-customer-type .anchor {
   cursor: pointer;
