--- a/src/styles/css/style.css
+++ b/src/styles/css/style.css
@@ -7485,17 +7485,17 @@ ul.recent-act-lw-main .act-info-wrap-left {
 
 /* Recurring css */
 .recurring-occurrence {
-  width: 357px;
-  height: 39px;
+  /* width: 357px; */
+  /* height: 39px; */
   display: flex;
-  justify-content: space-between;
+  /* justify-content: space-between; */
   gap: 15px;
   align-items: center;
   margin-bottom: 30px !important;
 }
 
 .recurring-occurrence-update {
-  width: 357px;
+  /* width: 357px; */
   display: flex;
   justify-content: space-between;
   gap: 15px;
@@ -8021,28 +8021,17 @@ ul.recent-act-lw-main .act-info-wrap-left {
   flex-wrap: wrap;
 }
 .frequency-buttons .btn {
-  background-color: var(--dark_blue);
-  border: none;
-  font-family: "Comfortaa", sans-serif;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 20px;
-  text-align: center;
-  color: #ffffff;
   padding: 15px 20px;
   min-width: 140px;
-  /* border-radius: 15px !important; */
-  box-shadow: 4px 4px 30px 5px rgba(48, 106, 255, 0.1);
 }
 
-.frequency-buttons .btn-freqActive {
+.btn-freqActive {
   background: #0081c5;
   color: white;
   border-radius: 50px !important;
 }
 
-.frequency-buttons .btn-freqInactive {
+.btn-freqInactive {
   background: #f2f2f2;
   color: #0081c5;
   border: 0.85px solid #0081c5;
